--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/index.js"></script>
 
-    <h1>Hello World! we are software developers</h1>
-    
+    <div id="titlewrap">
+      <h1 id="title">freeCodeCamp Survey Form</h1>
+      <p id="description">
+        Thank you for taking the time to help us improve the platform
+      </p>
+    </div>
   </body>
 </html>
+<style>
+  #titlewrap {
+    text-align: center;
+    margin-top: 20px;
+  }
+  #titlewrap p {
+    padding-top: 3px;
+  }
+</style>
