--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css" />
+
   </head>
 
   <body>
@@ -16,14 +17,13 @@
         Thank you for taking the time to help us improve the platform
       </p>
     </div>
+    <div >
+      <form id="survey-form">
+        <label>Name </label>
+        <input type="text" id="name">
+
+      </form>
+    </div>
   </body>
 </html>
-<style>
-  #titlewrap {
-    text-align: center;
-    margin-top: 20px;
-  }
-  #titlewrap p {
-    padding-top: 3px;
-  }
-</style>
+
