feature 5 and 6 are done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css" />
-
   </head>
 
   <body>
@@ -17,13 +16,13 @@
         Thank you for taking the time to help us improve the platform
       </p>
     </div>
-    <div >
+    <div id="myForm">
       <form id="survey-form">
-        <label>Name </label>
-        <input type="text" id="name">
-
+        <label>Name </label><br />
+        <input type="text" id="name" /><br />
+        <label>Email</label><br />
+        <input type="email" id="email" pattern=".+@globex\.com" required />
       </form>
     </div>
   </body>
 </html>
-
