--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <label>Name </label><br />
         <input type="text" id="name" /><br />
         <label>Email</label><br />
-        <input type="email" id="email" pattern=".+@globex\.com" required />
+        <input type="email" id="email" pattern=".+@globex\.com" required /><br/>
+        <label>Age (Optional)</label><br />
+        <input type="number" id="number" pattern= "[0-9]" required />
       </form>
     </div>
   </body>
