--- a/index.html
+++ b/index.html
@@ -18,12 +18,24 @@
     </div>
     <div id="myForm">
       <form id="survey-form">
-        <label>Name </label><br />
+        <label id="name-label">Name </label><br />
         <input type="text" id="name" /><br />
-        <label>Email</label><br />
-        <input type="email" id="email" pattern=".+@globex\.com" required /><br/>
-        <label>Age (Optional)</label><br />
-        <input type="number" id="number" pattern= "[0-9]" required />
+        <label id="email-lable">Email</label><br />
+        <input
+          type="email"
+          id="email"
+          pattern=".+@globex\.com"
+          required
+        /><br />
+        <label id="number-label">Age (Optional)</label><br />
+        <input
+          type="number"
+          id="number"
+          pattern="[0-9]"
+          min="0"
+          max="100"
+          required
+        />
       </form>
     </div>
   </body>
