--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div id="myForm">
       <form id="survey-form">
         <label id="name-label">Name </label><br />
-        <input type="text" id="name" /><br />
+        <input type="text" id="name" placeholder="Enter your name"/><br />
         <label id="email-lable">Email</label><br />
         <input
           type="email"
           id="email"
           pattern=".+@globex\.com"
-          required
+          required placeholder="Enter your email"
         /><br />
         <label id="number-label">Age (Optional)</label><br />
         <input
@@ -34,8 +34,14 @@
           pattern="[0-9]"
           min="0"
           max="100"
-          required
+          required placeholder="Enter your age"
         />
+        <br/>
+        <label>Current Role</label><br/>
+        <select id="dropdown">
+          <option value="student">Student</option>
+          <option value="teacher">Teacher</option>
+        </select>
       </form>
     </div>
   </body>
