--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <div id="myForm">
       <form id="survey-form">
         <label id="name-label">Name </label><br />
-        <input type="text" id="name" placeholder="Enter your name"/><br />
+        <input type="text" id="name" placeholder="Enter your name" /><br />
         <label id="email-lable">Email</label><br />
         <input
           type="email"
           id="email"
           pattern=".+@globex\.com"
-          required placeholder="Enter your email"
+          required
+          placeholder="Enter your email"
         /><br />
         <label id="number-label">Age (Optional)</label><br />
         <input
@@ -34,14 +35,36 @@
           pattern="[0-9]"
           min="0"
           max="100"
-          required placeholder="Enter your age"
+          required
+          placeholder="Enter your age"
         />
-        <br/>
-        <label>Current Role</label><br/>
+        <br />
+        <label>Current Role</label><br />
         <select id="dropdown">
           <option value="student">Student</option>
-          <option value="teacher">Teacher</option>
-        </select>
+          <option value="teacher">Teacher</option></select
+        ><br />
+        <label>Would you recommend freeCodeCamp to a friend?</label><br />
+        <label>
+          <input type="radio" name="user-recommendation" value="Maybe" />
+          May be
+        </label>
+        <br />
+        <label>
+          <input type="radio" name="user-recommendation" value="Sure" />
+          Sure</label
+        ><br />
+        <label
+          >What would you like to see improved? (Check all that apply)</label
+        ><br />
+        <label>
+          <input type="checkbox" name="prefer" value="Front-end Project" />
+          Front-end Project </label
+        ><br />
+        <label>
+          <input type="checkbox" name="prefer" value="Back-end Project" />
+          Back-end Project
+        </label>
       </form>
     </div>
   </body>
